# docs/swagger.yaml
@@ -55,6 +55,8 @@ definitions:
         items:
           $ref: '#/definitions/comment.AttachmentDTO'
         type: array
+      author:
+        $ref: '#/definitions/comment.UserSummaryDTO'
       author_id:
         type: string
       content:
@@ -87,6 +89,8 @@ definitions:
         type: array
       reply_count:
         type: integer
+      reply_to_author:
+        $ref: '#/definitions/comment.UserSummaryDTO'
       reply_to_id:
         type: string
       root_id:
@@ -307,6 +311,17 @@ definitions:
         type: integer
       start:
         type: integer
+    type: object
+  comment.UserSummaryDTO:
+    properties:
+      avatar_url:
+        type: string
+      display_name:
+        type: string
+      id:
+        type: string
+      username:
+        type: string
     type: object
   feed.AutoSubscriptionAddRequest:
     properties:
@@ -3490,6 +3505,14 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/comment.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "415":
+          description: Unsupported Media Type
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -6108,6 +6131,14 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/comment.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "415":
+          description: Unsupported Media Type
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -6228,6 +6259,14 @@ paths:
             $ref: '#/definitions/comment.ErrorResponse'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "415":
+          description: Unsupported Media Type
           schema:
             $ref: '#/definitions/comment.ErrorResponse'
         "500":
@@ -6520,6 +6559,14 @@ paths:
           description: Conflict
           schema:
             $ref: '#/definitions/comment.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "415":
+          description: Unsupported Media Type
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
         "429":
           description: Too Many Requests
           schema:
@@ -6622,6 +6669,14 @@ paths:
             $ref: '#/definitions/comment.ErrorResponse'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/comment.ErrorResponse'
+        "415":
+          description: Unsupported Media Type
           schema:
             $ref: '#/definitions/comment.ErrorResponse'
         "500":
@@ -10409,13 +10464,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handlers.SearchUsersResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      security:
-      - BearerAuth: []
-      - CookieAuth: []
       summary: 搜索用户
       tags:
       - users
